<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:padding="20dp"
    tools:context="com.design4web.tripii.Createclasstrip">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#fff"
                android:text="@string/trippr"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:layout_below="@+id/text"
                android:text="@string/createclasstrip"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/teacherprofile"
                />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/teacherprofile"
                android:background="@drawable/corners"
                android:padding="10dp"
                android:lines="1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:hint="@string/tripname"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trippassword"
                android:layout_below="@+id/name"
                android:background="@drawable/corners"
                android:padding="10dp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:textAlignment="center"
                android:hint="@string/trippassword"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textStyle="bold"
                android:layout_below="@+id/trippassword"
                android:background="@drawable/corners"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:lines="5"
                android:textAlignment="center"
                android:hint="@string/description"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:padding="10dp"
                android:textStyle="bold"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center"
                android:background="@drawable/corners"
                android:hint="@string/date"
                android:lines="1"
                android:layout_below="@+id/description"
                android:layout_marginTop="20dp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enddate"
                android:padding="10dp"
                android:textStyle="bold"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center"
                android:background="@drawable/corners"
                android:hint="@string/enddate"
                android:lines="1"
                android:layout_below="@+id/date"
                android:layout_marginTop="20dp"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createtrip"
                android:layout_below="@+id/enddate"
                android:text="@string/createtrip"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttonbg"
                android:textColor="#fff"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seealltrip"

                android:layout_below="@+id/createtrip"
                android:text="@string/seealltrip"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/teacherlayourbg"
                android:textColor="#fff"

                />










        </RelativeLayout>

    </ScrollView>


</RelativeLayout>



