<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/backgroundcolor"
    tools:context="com.design4web.tripii.Tripoverview">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#fff"
        android:text="@string/trippr"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:layout_below="@+id/text"
        android:text="@string/teachertripov"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/teacherprofile"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:textStyle="bold"
        android:layout_below="@+id/teacherprofile"
        android:background="@drawable/corners"
        android:padding="10dp"
        android:enabled="false"
        android:layout_marginTop="20dp"
        android:lines="5"
        android:textAlignment="center"
        android:hint="@string/description"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="#ec640f"
        android:layout_below="@+id/description"
        android:text="@string/comments"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/commentstext"
        />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listview"
        android:layout_above="@+id/jointrip"
        android:layout_below="@+id/commentstext"
        android:layout_marginTop="20dp"
        >

    </ListView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jointrip"
        android:layout_alignParentBottom="true"
        android:text="@string/jointhistrip"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttonbg"
        android:textColor="#fff"

        />



</RelativeLayout>
