<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/backgroundcolor"
    tools:context="com.design4web.tripii.Createteacherprofile">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#fff"
                android:text="@string/trippr"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
               android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:layout_below="@+id/text"
                android:text="@string/teacherprofile"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/teacherprofile"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/teacherprofile"
                android:background="@drawable/corners"
                android:padding="10dp"
                android:lines="1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:hint="@string/name"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/schoolname"
                android:layout_below="@+id/name"
                android:background="@drawable/corners"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:textAlignment="center"
                android:hint="@string/school"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textStyle="bold"
                android:layout_below="@+id/schoolname"
                android:background="@drawable/corners"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:textAlignment="center"
                android:hint="@string/email"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/corners"
                android:hint="@string/password"
                android:lines="1"
                android:inputType="textPassword"
                android:layout_below="@+id/email"
                android:layout_marginTop="20dp"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:id="@+id/licencelayout"
                android:visibility="gone"
                android:background="@drawable/teacherlayourbg"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inputlicence"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"
                    android:id="@+id/inputlicence"
                    android:textStyle="bold"
                    />




                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/licencecode"
                    android:textStyle="bold"
                    android:layout_below="@+id/inputlicence"
                    android:background="@drawable/corners"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:lines="1"
                    android:textAlignment="center"
                    android:hint="@string/licencecode"
                    />




                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/validate"
                    android:layout_below="@+id/licencecode"
                    android:text="@string/validate"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"

                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttonbg"
                    android:textColor="#fff"

                    />




            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:textColor="#fc9b1010"
                android:text="@string/membership"
                android:textAlignment="center"
                android:layout_below="@+id/password"
                android:textStyle="bold"
                android:id="@+id/choosemembership"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choosemembership"
                android:layout_marginTop="20dp"
                android:id="@+id/linearlay"
                android:visibility="gone"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="10dp"
                    android:background="#8ad266"
                    android:padding="5dp"
                    android:id="@+id/freetrial"
                    android:layout_weight="1"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/relfree"
                        >


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/trialperiod"
                            android:textColor="#fff"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:id="@+id/trialperiod"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/oneclasstrip"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:layout_below="@+id/trialperiod"
                            android:id="@+id/oneclasstrip"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/maxstudent"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:layout_marginTop="5dp"
                            android:layout_below="@+id/oneclasstrip"
                            android:id="@+id/maxstudents"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/oneteacher"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:layout_marginTop="5dp"
                            android:layout_below="@+id/maxstudents"
                            android:id="@+id/oneteacher"
                            />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textStyle="bold"
                            android:text="@string/free"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:layout_marginTop="5dp"
                            android:layout_below="@+id/oneteacher"
                            android:id="@+id/free"
                            android:paddingBottom="10dp"
                            />



                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#61d22a"
                    android:padding="5dp"
                    android:id="@+id/fullaccess"
                    android:layout_weight="1"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/relfull"
                        >



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fullaccess"

                            android:textStyle="bold"
                            android:textColor="#fff"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:id="@+id/fullaccress"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/unlimited"
                            android:textColor="#fff"
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"

                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:layout_below="@+id/fullaccress"
                            android:id="@+id/unlimited"
                            />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fiftyteacher"
                            android:textColor="#fff"
                            android:layout_marginTop="8dp"
                            android:textAlignment="center"
                            android:textSize="12sp"

                            android:textStyle="bold"
                            android:layout_below="@+id/unlimited"
                            android:id="@+id/fiftyteacher"
                            />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/onetwenty"
                            android:textColor="#fff"
                            android:layout_marginTop="7dp"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_below="@+id/fiftyteacher"
                            android:id="@+id/onetwenty"
                            android:paddingBottom="10dp"
                            />





                    </RelativeLayout>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:background="#398e10"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:id="@+id/alreadymember"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/relalreadymember"
                        >



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/alreadymember"

                            android:textStyle="bold"
                            android:textColor="#fff"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:id="@+id/alreadymember1"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/registerhere"
                            android:textColor="#fff"
                            android:layout_marginTop="10dp"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:layout_below="@+id/alreadymember1"

                            android:textStyle="bold"
                            android:id="@+id/registerhere"
                            android:paddingBottom="25dp"
                            />




                    </RelativeLayout>

                </LinearLayout>






            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createprofile"
                android:layout_below="@+id/linearlay"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttonbg"
                android:textColor="#fff"

                />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
